# speech-transcription

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.migrate
src/: config.py  lifecycle.py  logging.py  main.py  middlewares.py  routes.py  schemas.py  utils.py
src/auth/security/: dependencies.py  token.py
src/exceptions/: handlers.py
src/transcription/: enums.py  routes.py  schemas.py  services.py  speech_transcription.py  utils.py
src/users/: models.py  routes.py  services.py
tests/auth/: test_routes.py
tests/auth/security/: test_token.py
