[project]
name = "speech-transcription"
version = "0.0.2"
description = "Speech Transcription is an API for automatic speech transcription, enabling accurate transcription of audio into text."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "alembic>=1.17.2",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "structlog>=25.5.0",
    "pydantic>=2.11.4",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.12",
    "scalar-fastapi>=1.0.3",
    "pyjwt>=2.10.1",
    "advanced-alchemy>=1.4.1",
    "srt>=3.5.3",
]

transcription = [
    "whisperx>=3.3.1",
    "librosa>=0.11.0",
    "audio-separator==0.39.1",
]

migrate = [
    "asyncpg>=0.30.0",
    "alembic>=1.17.2",
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "freezegun>=1.5.1",
]

dev = [
    "ruff>=0.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    ".venv",
    "migrations"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
transcription = [
    "audio-separator>=0.39.1",
]
